chore: Fix sonarqube issues